sgd/reproduction/playground/objects/SVMXC__Installed_Product__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Installed Product represents one or a collection of product units delivered to a customer and installed at the customer’s location(s). Depending upon the tracking needs of an organization, installed products are tracked using a serial number, a lot/batch number or simply by the product number. In ServiceMax, Installed Product record drives entitlement, material movement and service delivery activities.</description>
    <fields>
        <fullName>Null_Field__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Null Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_AnlyLink__c</fullName>
        <label>依頼分析</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Application__c</fullName>
        <label>アプリケーション</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Asset_Uptime__c</fullName>
        <label>稼働状況（%）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_BudgetMonth__c</fullName>
        <label>予算申請時期</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                    <label>１月</label>
                </value>
                <value>
                    <fullName>February</fullName>
                    <label>２月</label>
                </value>
                <value>
                    <fullName>March</fullName>
                    <label>３月</label>
                </value>
                <value>
                    <fullName>April</fullName>
                    <label>４月</label>
                </value>
                <value>
                    <fullName>May</fullName>
                    <label>５月</label>
                </value>
                <value>
                    <fullName>June</fullName>
                    <label>６月</label>
                </value>
                <value>
                    <fullName>July</fullName>
                    <label>７月</label>
                </value>
                <value>
                    <fullName>August</fullName>
                    <label>８月</label>
                </value>
                <value>
                    <fullName>September</fullName>
                    <label>９月</label>
                </value>
                <value>
                    <fullName>October</fullName>
                    <label>１０月</label>
                </value>
                <value>
                    <fullName>November</fullName>
                    <label>１１月</label>
                </value>
                <value>
                    <fullName>December</fullName>
                    <label>１２月</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_ChildLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ベンチ</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Installed Products (Child Location)</relationshipLabel>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CustomerManagedNo__c</fullName>
        <label>顧客内管理No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EndOfPartsSupply__c</fullName>
        <formula>SVMXC__Product__r.SMAX_PS_EndOfPartsSupply__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>部品供給終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EndOfSalesDate__c</fullName>
        <formula>SVMXC__Product__r.SMAX_PS_EndOfSalesDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>製品販売終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_GEOPlusKotaiNo__c</fullName>
        <externalId>true</externalId>
        <label>GEO Plus個体管理No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_HardSoftVer__c</fullName>
        <label>ハード/ソフトバージョン</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_HostInfo__c</fullName>
        <label>上位通信　(HOST情報)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IPManageMemo__c</fullName>
        <label>装置管理情報</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IP_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IP Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Initial_Contract_Date__c</fullName>
        <label>初回契約日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_InspectionLimitDate__c</fullName>
        <label>計量法検定期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_InstalledBaseName__c</fullName>
        <label>製品型式名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MeterCategory__c</fullName>
        <label>濃度計区分</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_MeterCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_ModelApprovalNo__c</fullName>
        <label>型式承認番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_OriginalHgsNo__c</fullName>
        <label>元HGS No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_OriginalWBSNo__c</fullName>
        <label>元WBS No.</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PCInfo__c</fullName>
        <label>PC型式/シリアルナンバー/交換日</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ProducedDate__c</fullName>
        <label>製造日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ProductMaker__c</fullName>
        <label>製造元</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PurposeofUsage__c</fullName>
        <label>使用用途</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Devlopment</fullName>
                    <label>開発</label>
                </value>
                <value>
                    <fullName>Authentication</fullName>
                    <label>認証</label>
                </value>
                <value>
                    <fullName>Production</fullName>
                    <label>生産</label>
                </value>
                <value>
                    <fullName>Main</fullName>
                    <label>メイン</label>
                </value>
                <value>
                    <fullName>Sub</fullName>
                    <label>サブ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_RefLink__c</fullName>
        <label>参考資料リンク</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_RegulationMemo__c</fullName>
        <label>検定情報・対象法規</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_AccountCustomerCd__c</fullName>
        <formula>SVMXC__Company__r.SMAX_PS_CustomerCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>エンドユーザCD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_DeliveryDetailsNo__c</fullName>
        <label>出荷伝票明細No</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_DeliveryNo__c</fullName>
        <label>出荷伝票No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_EquipmentNo__c</fullName>
        <externalId>true</externalId>
        <label>SAP設備番号</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_MakerEndUserText__c</fullName>
        <label>EndUser名テキスト（出荷時）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_MakerShipToNo__c</fullName>
        <formula>SMAX_PS_SAP_MakerShipTo__r.SMAX_PS_CustomerCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>メーカー出荷先CD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_MakerShipToText__c</fullName>
        <label>出荷先名テキスト（出荷時）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_MakerShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>メーカー出荷先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Installed Products (メーカー出荷先)</relationshipLabel>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_MakerSoldToNo__c</fullName>
        <formula>SVMXC__Distributor_Company__r.SMAX_PS_CustomerCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>メーカー受注先CD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_MaterialNo__c</fullName>
        <formula>SVMXC__Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP品目コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SODetailsNo__c</fullName>
        <label>受注伝票明細No</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesGroup__c</fullName>
        <label>サービス営業Gr</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_SAP_SalesOffice__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesOffice__c</fullName>
        <label>サービス営業所</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesOffice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_ScrapReasonList__c</fullName>
        <label>廃棄理由</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>HOR製品で更新</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>他社製品で更新</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>使用しないため</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>その他</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_ScrapReasonMemo__c</fullName>
        <label>廃棄理由詳細</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Segment__c</fullName>
        <label>セグメント</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SerialTrackingMemo__c</fullName>
        <label>HGS No.変更履歴管理メモ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service2ndDistCd__c</fullName>
        <formula>SMAX_PS_Service2ndDist__r.SMAX_PS_CustomerCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>サービス二次販社CD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service2ndDist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>サービス二次販社</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Installed Products (サービス二次販社)</relationshipLabel>
        <relationshipName>Installed_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServiceSoldToCd__c</fullName>
        <formula>SMAX_PS_ServiceSoldTo__r.SMAX_PS_CustomerCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>サービス受注先CD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServiceSoldTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>サービス受注先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Installed Products (サービス受注先)</relationshipLabel>
        <relationshipName>Installed_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SubContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>顧客副担当者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Installed Products (顧客副担当者)</relationshipLabel>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SubSystemInfo__c</fullName>
        <label>下位通信・他社システム組合情報</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SupportCategory__c</fullName>
        <label>自社・他社保守区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HTS</fullName>
                </value>
                <value>
                    <fullName>AOP</fullName>
                </value>
                <value>
                    <fullName>ServiceContract</fullName>
                    <label>保守契約</label>
                </value>
                <value>
                    <fullName>Internal</fullName>
                    <label>内製</label>
                </value>
                <value>
                    <fullName>ThirdParty</fullName>
                    <label>3rd(パートナー)</label>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                    <label>協力会社(メーカーライセンス)</label>
                </value>
                <value>
                    <fullName>NoMaintenance</fullName>
                    <label>ノーメンテ</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <label>不明</label>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                    <label>サブスク</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_WBSNo__c</fullName>
        <label>WBS No.</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_WorkedHours__c</fullName>
        <label>稼働時間（H）</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Access_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Time period during which this installed product can be accessed for service. Reference to an existing Business Hours record in Salesforce</description>
        <label>Access Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Alternate_Company__c</fullName>
        <description>Free text to indicate if another account is involved with this product but is not an existing customer record</description>
        <inlineHelpText>Free text to indicate if another company is involved with this product but is not an existing customer record</inlineHelpText>
        <label>Alternate Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Asset_Tag__c</fullName>
        <description>Another way to identify the installed product. Typically asset tags are assigned by your customers. This will be a timesaver when your customer calls for support and identifies  the product by their asset tag instead of trying to locate your serial number on the product</description>
        <inlineHelpText>Another way to identify the installed product. Asset tags are normally assigned by your customers. When your customer calls for support, they can identify the product by their asset tag instead of trying to locate your serial number on the product.</inlineHelpText>
        <label>Asset Tag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Do Not Use)</description>
        <inlineHelpText>(Do Not Use)</inlineHelpText>
        <label>Business Hours (Do Not Use)</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Installed_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__City__c</fullName>
        <description>“City” part of the physical location address</description>
        <inlineHelpText>“City” part of the physical location address</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the customer account for this installed product. Lookup to an existing salesforce account record</description>
        <inlineHelpText>Name of the customer account for this installed product. Lookup to an existing salesforce account record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N70000001hzZ0EAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the primary contact for this installed product at the customer’s location. Lookup to an existing salesforce contact record</description>
        <inlineHelpText>Name of the primary contact for this installed product at the customer’s location. Lookup to an existing salesforce contact record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N70000001hzcJEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Country__c</fullName>
        <description>“Country” part of the physical location address</description>
        <inlineHelpText>“Country” part of the physical location address</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Ayerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bouvet Is</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Date_Installed__c</fullName>
        <description>Date on which the product was installed at the customer location</description>
        <inlineHelpText>Date on which the product was installed at the customer location</inlineHelpText>
        <label>Date Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Date_Ordered__c</fullName>
        <description>Date on which this product was ordered by the customer</description>
        <inlineHelpText>Date on which this product was ordered by the customer</inlineHelpText>
        <label>Date Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Date_Shipped__c</fullName>
        <description>Date on which this product was shipped to the customer originally</description>
        <inlineHelpText>Date on which this product was shipped to the customer originally</inlineHelpText>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Distributor_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the distributor account if applicable</description>
        <inlineHelpText>Name of the distributor company if applicable</inlineHelpText>
        <label>Distributor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N70000001hzcLEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Distributor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the distributor contact if applicable</description>
        <inlineHelpText>Name of the distributor contact if applicable</inlineHelpText>
        <label>Distributor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N70000001hzc8EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Installation_Notes__c</fullName>
        <description>Any technical information relevant for the service organization. This is normally supplied by field service engineers upon completion of installation</description>
        <inlineHelpText>Any technical information relevant for the service organization. This is normally supplied by field service engineers upon completion of installation</inlineHelpText>
        <label>Installation Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Last_Date_Shipped__c</fullName>
        <description>If this product was shipped multiple times, date of the most recent shipment. Multiple shipments are possible if the product is returned for depot repair or service</description>
        <inlineHelpText>If this product was shipped multiple times, date of the most recent shipment. Multiple shipments are possible if the product is returned for depot repair or service</inlineHelpText>
        <label>Last Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Latitude__c</fullName>
        <description>Address location north or south of the equator</description>
        <inlineHelpText>Address location north or south of the equator</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Longitude__c</fullName>
        <description>East west geographic coordinate measurement.</description>
        <inlineHelpText>East west geographic coordinate measurement.</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial/Lot number of the parent product in the installed product hierarchy. This is a lookup to an existing installed product record.</description>
        <inlineHelpText>Serial/Lot number of the parent product in the installed product hierarchy. This is a lookup to an existing installed product record.</inlineHelpText>
        <label>Parent</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>R00N70000001hzcgEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipName>Installed_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__ProductIQTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductIQ Template</label>
        <referenceTo>SVMXC__ProductIQTemplate__c</referenceTo>
        <relationshipName>Installed_Products_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Name__c</fullName>
        <description>Name of the product associated with the Installed Product</description>
        <formula>SVMXC__Product__r.Name</formula>
        <inlineHelpText>Name of the product associated with the Installed Product</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the product. This is a lookup to an existing salesforce product record.</description>
        <inlineHelpText>Name of the product. This is a lookup to an existing salesforce product record.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>R00N70000001hzchEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Batch_Lot2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identification number assigned to a specific quantity or lot of materials from a single manufacturer.</description>
        <inlineHelpText>Identification number assigned to a specific quantity or lot of materials from a single manufacturer.</inlineHelpText>
        <label>Batch/Lot</label>
        <referenceTo>SVMXC__SM_Batch_Lot__c</referenceTo>
        <relationshipLabel>Installed Products</relationshipLabel>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_Company__c</fullName>
        <description>External system unique ID of the account related to the installed product.</description>
        <inlineHelpText>External system unique ID of the account related to the installed product.</inlineHelpText>
        <label>Account (External)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_ID__c</fullName>
        <description>External System Unique ID</description>
        <externalId>true</externalId>
        <inlineHelpText>External System Unique ID</inlineHelpText>
        <label>External Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_Parent__c</fullName>
        <description>External system unique ID to the parent installed product in the installed product hierarchy.</description>
        <inlineHelpText>External system unique ID to the parent installed product in the installed product hierarchy.</inlineHelpText>
        <label>Parent (External)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_Product__c</fullName>
        <description>External system unique ID of the product related to installed product</description>
        <inlineHelpText>External system unique ID of the product related to installed product</inlineHelpText>
        <label>Product (External)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_Site__c</fullName>
        <description>External system unique ID of the location related to the installed product.</description>
        <inlineHelpText>External system unique ID of the location related to the installed product.</inlineHelpText>
        <label>Location (External)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_Top_Level__c</fullName>
        <description>External system unique ID to the top level installed product in the installed product hierarchy.</description>
        <inlineHelpText>External system unique ID to the top level installed product in the installed product hierarchy.</inlineHelpText>
        <label>Top-Level (External)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sales_Order_Number__c</fullName>
        <description>Sales order reference (typically from the ERP application)</description>
        <inlineHelpText>Sales order reference (typically from the ERP application)</inlineHelpText>
        <label>Sales Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Serial_Lot_Number__c</fullName>
        <description>Unique identification of this product. This information is Required if the product’s tracking is Serialized or Lot/Batch Tracked in the product record</description>
        <inlineHelpText>Unique identification of this product. This information is Required if the product’s tracking is Serialized or Lot/Batch Tracked in the product record</inlineHelpText>
        <label>Serial/Lot Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_End_Date__c</fullName>
        <description>This field is used by Reverse Logistics Module. End date of the latest service contract/line for this installed product. Derived automatically upon creating/updating service contract</description>
        <label>Service Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_Exchange_Type__c</fullName>
        <description>This field is used by Reverse Logistics Module. Exchange type from the latest service contract/line for this installed product. Derived automatically upon creating/updating service contract</description>
        <label>Service Contract Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used by Reverse Logistics Module. Reference to the latest service contract line for this installed product. Derived automatically upon creating/updating service contract</description>
        <label>Service Contract Line</label>
        <referenceTo>SVMXC__Service_Contract_Products__c</referenceTo>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>